--- a/inne.html
+++ b/inne.html
@@ -9,9 +9,15 @@
 <body>
     <div class="container">
         <h1>Inne Strony</h1>
-        <div class="table-wrapper">
-            <table border="1">
-            </table>
+        <div class="buttons">
+            <a href="20250625_kregle.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750882768/kregle_vuxam4.png" alt="Kręgle">
+                <span>Kręgle</span>
+            </a>
+            <a href="20250625_szkola.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750882454/szkolaklasa2_m1nj0h.png" alt="Szkola 2">
+                <span>Szkoła2</span>
+            </a>
         </div>
     </div>
     <script src="script.js"></script>
