--- a/20250626_sredniakoncowa.html
+++ b/20250626_sredniakoncowa.html
@@ -92,7 +92,7 @@
 
   <script>
     const subjects = [
-      "Bezpieczeństwo i Higiena Pracy", "Biologia", "Biznes i Zarządzanie", "Chemia", "Edukacja dla Bezpieczeństwa", "Fizyka", "Geografia", "Historia", "Historia i Teraźniejszość", "Informatyka", "Język Angielski", "Język Angielski Zawodowy", "Język Niemiecki", "Język Polski", "Matematyka", "Plastyka", "Podstawy Informatyki", "Pracownia Programowania Aplikacji Desktopowych", "Pracownia Programowania Aplikacji Internetowych", "Pracownia Projektowania i Administrowania Bazami Danych", "Pracownia Projektowania Oprogramowania", "Pracownia Projektowania Stron Internetowych", "Programowanie Aplikacji Desktopowych", "Programowanie Aplikacji Internetowych", "Programowanie Obiektowe", "Programowanie Oprogramowania", "Religia", "Wychowanie Fizyczne"
+      "Bezpieczeństwo i Higiena Pracy", "Biologia", "Biznes i Zarządzanie", "Chemia", "Edukacja dla Bezpieczeństwa", "Fizyka", "Geografia", "Historia", "Historia i Teraźniejszość", "Informatyka", "Język Angielski", "Język Angielski Zawodowy", "Język Niemiecki", "Język Polski", "Matematyka", "Plastyka", "Podstawy Informatyki", "Pracownia Programowania Aplikacji Desktopowych", "Pracownia Programowania Aplikacji Internetowych", "Pracownia Projektowania i Administrowania Bazami Danych", "Pracownia Projektowania Oprogramowania", "Pracownia Projektowania Stron Internetowych", "Programowanie Aplikacji Desktopowych", "Programowanie Aplikacji Internetowych", "Programowanie Obiektowe", "Programowanie Obiektowe", "Projektowanie i Administrowanie Bazami Danych", "Projektowanie Stron Internetowych", "Projektowanie Oprogramowania", "Religia", "Wychowanie Fizyczne"
     ];
 
     const selectedSubjects = JSON.parse(localStorage.getItem("selectedSubjects")) || {};
