--- a/20250626_sredniakoncowa.html
+++ b/20250626_sredniakoncowa.html
@@ -31,15 +31,15 @@
       padding: 10px 20px;
       font-size: 16px;
       border: none;
-      background-color: white;
-      color: #3498db;
+      background-color: #2980b9;
+      color: white;
       border-radius: 5px;
       cursor: pointer;
     }
 
     button.active {
-      background-color: #2980b9;
-      color: white;
+      background-color: white;
+      color: #3498db;
     }
 
     .content {
@@ -84,7 +84,7 @@
     <div class="header-buttons">
       <button id="btnAverage" class="active">Średnia</button>
       <button id="btnSubjects">Przedmioty</button>
-      <button id="btnReset">Resetuje</button>
+      <button id="btnReset">Resetuj</button>
     </div>
   </header>
 
