--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251231/tempobiegu_vb1sow.jpg" alt="Tempo Biegu">
                 <span>Tempo Biegu</span>
             </a>
+            <a href="20250626_sredniakoncowa.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750958961/sredniaocenkonczowych_bqwe0b.png" alt="Średnia">
+                <span>Średnia</span>
+            </a>
             <a href="20250620_krotoszankarower.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750444141/krotorower_uyslkq.png" alt="Krotoszyńska Odznaka Krajoznawcza dla Kolarzy">
-                <span>Krotoszyńska Odznaka Krajoznawcza dla Kolarzy</span>
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750444141/krotorower_uyslkq.png" alt="Krotoszanka">
+                <span>Krotoszanka</span>
             </a>
             <a href="20250622_karty.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750880191/kartylogo_xlku4l.png" alt="Karty">
                 <span>Karty Piłkarskie</span>
-            </a>
-            <a href="20250625_fifa.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750880881/fifalogo_ewpv6l.png" alt="Turniej Fifa">
-                <span>Turniej Fifa</span>
             </a>
             <a href="inne.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750881328/inne_cqv03n.png" alt="Inne">
