--- a/inne.html
+++ b/inne.html
@@ -10,6 +10,14 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="20250625_fifa.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750880881/fifalogo_ewpv6l.png" alt="Turniej Fifa">
+                <span>Turniej Fifa</span>
+            </a>
+            <a href="20250626_inneosiagniecia.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750959133/inneosiagniecia_tykgty.png" alt="Inne Osiągnięcia">
+                <span>Inne Osiągnięcia</span>
+            </a>
             <a href="20250623_kregle.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750882768/kregle_vuxam4.png" alt="Kręgle">
                 <span>Kręgle</span>
