--- a/20250620_krotoszankarower.html
+++ b/20250620_krotoszankarower.html
@@ -116,8 +116,8 @@
           { id: "krotoszanka", name: "Chata „Krotoszanka” przy ul. Koźmińskiej", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6987506, lon: 17.4387264 },
           { id: "k_rocha", name: "Kościół pw. św. Fabiana i Sebastiana zw. też kościołem św. Rocha", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6981264, lon: 17.4395344 },
           { id: "m_krotoszyn", name: "Muzeum Regionalne im. Hieronima Ławniczaka w Krotoszynie", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6958028, lon: 17.4350586 },
-          { id: "r_sulmierzyce", name: "Zabytkowy drewniany ratusz w Sulmierzycach", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6063464, lon: 17.5277967 },
-          { id: "r_zduny", name: "Ratusz w Zdunach", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6463983, lon: 17.3784725 },
+          { id: "r_sulmierzyce", name: "Zabytkowy drewniany ratusz w Sulmierzycach", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1751103024/IMG_20250626_163644_1_jevcrz.jpg", lat: 51.6063464, lon: 17.5277967 },
+          { id: "r_zduny", name: "Ratusz w Zdunach", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1751103143/IMG_20250627_130318_1_zuegtt.jpg", lat: 51.6463983, lon: 17.3784725 },
           { id: "r_kobylin", name: "Ratusz w Kobylinie", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.7135383, lon: 17.2259039 },
           { id: "z_kozmin", name: "Zamek i izba muzealna w Koźminie Wielkopolskim", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.8242344, lon: 17.4510558 },
           { id: "k_rozdrazew", name: "Kościół pw. św. Jana Chrzciciela w Rozdrażewie", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.7815631, lon: 17.5067508 },
@@ -129,11 +129,10 @@
         category: "rezerwaty",
         places: [
           { id: "dabrowa_smoszew", name: "Dąbrowa Smoszew", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6544667, lon: 17.5038981 },
-          { id: "miejski_bor", name: "Miejski Bór", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6746056, lon: 17.4567333 },
+          { id: "miejski_bor", name: "Miejski Bór", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1751103075/IMG_20250626_172422_1_oqng8x.jpg", lat: 51.6746056, lon: 17.4567333 },
           { id: "baszkow", name: "Baszków", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6769958, lon: 17.3373997 },
-          { id: "mszar_bogdaniec", name: "Mszar Bogdaniec", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6769694, lon: 17.3559536 },
-          { id: "buczyna_helenopol", name: "Buczyna Helenopol", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6465014, lon: 17.4495758 },
-          { id: "dabrowa_biadki", name: "Dąbrowa koło Biadek Krotoszyńskich", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6567011, lon: 17.5793178 }
+          { id: "mszar_bogdaniec", name: "Mszar Bogdaniec", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1751103108/IMG_20250627_120632_1_ghhdve.jpg", lat: 51.6769694, lon: 17.3559536 },
+          { id: "buczyna_helenopol", name: "Buczyna Helenopol", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6465014, lon: 17.4495758 }
         ]
       },
       {
@@ -147,15 +146,15 @@
               { id: "k_fara", name: "Kościół farny pw. św. Jana Chrzciciela w Krotoszynie", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6948317, lon: 17.4395472 },
               { id: "k_piotripawel", name: "Kościół pw. św. Piotra i Pawła w Krotoszynie", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6955225, lon: 17.4349417 },
               { id: "k_bobola", name: "Kościół poewangelicki pw. św. Andrzeja Boboli", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6938844, lon: 17.4285364 },
-              { id: "glaz_chwaliszew", name: "Głaz narzutowy na szlaku do Chwaliszewa", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6710583, lon: 17.4756144 }
+              { id: "glaz_chwaliszew", name: "Głaz narzutowy na szlaku do Chwaliszewa", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1751102979/IMG_20250202_163629_1_fdzrur.jpg", lat: 51.6710583, lon: 17.4756144 }
             ]
           },
           {
             gmina: "Gmina Sulmierzyce",
             category: "sulmierzyce",
             places: [
-              { id: "k_sulmierzyce", name: "Kościół pw. NMP Wniebowziętej w Sulmierzycach", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6064369, lon: 17.5303531 },
-              { id: "pomnik_sulmierzyce", name: "Pomnik Sebastiana Fabiana Klonowicza w Sulmierzycach", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6060628, lon: 17.5301811 }
+              { id: "k_sulmierzyce", name: "Kościół pw. NMP Wniebowziętej w Sulmierzycach", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1751103059/IMG_20250626_164259_1_zeuux1.jpg", lat: 51.6064369, lon: 17.5303531 },
+              { id: "pomnik_sulmierzyce", name: "Pomnik Sebastiana Fabiana Klonowicza w Sulmierzycach", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1751103041/IMG_20250626_163814_1_tqhjx2.jpg", lat: 51.6060628, lon: 17.5301811 }
             ]
           },
           {
@@ -163,9 +162,9 @@
             category: "zduny",
             places: [
               { id: "szaniec_borownica", name: "Szaniec powstańczy nad Borownicą", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6433975, lon: 17.4074497 },
-              { id: "m_zduny", name: "Izba muzealna przy ul. Henryka Sienkiewicza 1", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6462864, lon: 17.3770653 },
-              { id: "k_zduny", name: "Kościół pw. św. Jana Chrzciciela w Zdunach", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6486703, lon: 17.3729189 },
-              { id: "pomnik_zduny", name: "Pomnik powstańców na cmentarzu przykościelnym w Zdunach", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6483906, lon: 17.3727850 },
+              { id: "m_zduny", name: "Izba muzealna przy ul. Henryka Sienkiewicza 1", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1751103122/IMG_20250627_130227_1_nevwjg.jpg", lat: 51.6462864, lon: 17.3770653 },
+              { id: "k_zduny", name: "Kościół pw. św. Jana Chrzciciela w Zdunach", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1751103093/IMG_20250627_130013_1_jnibwa.jpg", lat: 51.6486703, lon: 17.3729189 },
+              { id: "pomnik_zduny", name: "Pomnik powstańców na cmentarzu przykościelnym w Zdunach", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1751103009/IMG_20250314_151745_1_vf2zqb.jpg", lat: 51.6483906, lon: 17.3727850 },
               { id: "grodzisko_zduny", name: "Grodzisko pierścieniowate przy ul. Kobylińskiej", zdj: "https://res.cloudinary.com/diljpkw9f/image/upload/v1750438350/niezdj_z7fjoq.png", lat: 51.6494556, lon: 17.3745981 }
             ]
           },
