--- a/20250626_inneosiagniecia.html
+++ b/20250626_inneosiagniecia.html
@@ -598,9 +598,7 @@
                 </tr>
                 <tr>
                     <td></td>
-                    <td><a href="https://wyniki.warcaby.pl/2024/0091/20240517_pp_ch/final_standings&6.html">
-                        XXI Mistrzostwa Polski Szkół i UKS-ów - Ponadpodstawowe - Chłopcy
-                    </a></td>
+                    <td>XXI Mistrzostwa Polski Szkół i UKS-ów - Ponadpodstawowe - Chłopcy</td>
                     <td>Warcaby</td>
                     <td>17.05.2024</td>
                     <td>Żerków</td>
