--- a/20250703_norwegia.html
+++ b/20250703_norwegia.html
@@ -111,14 +111,20 @@
     <section id="plan" style="display: none;">
       <h2>Plan Wycieczki - Do Fiordów Norwegii (Itaka)</h2>
       <ol>
-        <li><strong>Dzień 1:</strong> Przelot do Norwegii, zakwaterowanie</li>
-        <li><strong>Dzień 2:</strong> Zwiedzanie Oslo</li>
-        <li><strong>Dzień 3:</strong> Przejazd do regionu fiordów</li>
-        <li><strong>Dzień 4:</strong> Rejs po fiordzie Geiranger</li>
-        <li><strong>Dzień 5:</strong> Wodospady i góry, dolina Flam</li>
-        <li><strong>Dzień 6:</strong> Bergen – miasto nad fiordem</li>
-        <li><strong>Dzień 7:</strong> Czas wolny lub opcjonalne wycieczki</li>
-        <li><strong>Dzień 8:</strong> Powrót do Polski</li>
+        <li><strong>Dzień 1:</strong>Zbiórka uczestników. Przejazd do portu. Przeprawa promowa.</li>
+        <li><strong>Dzień 2:</strong>Iddefjord - Fredrikstad (Trasa ok. 650 km)<br>
+Zacumowanie. Przejazd wzdłuż zachodniego wybrzeża Szwecji do granicy z Norwegią. Oba kraje łączy imponujący most Svinesund o dł. 704 m, ze wspaniałym widokiem na IDDEFJORD. Przejazd do FREDRIKSTAD. Zwiedzanie pięknie położonego miasteczka z najlepiej zachowaną fortecą w Skandynawii, Starym Miastem, Muzeum Miasta i mariną. Przejazd do hotelu. Zakwaterowanie, nocleg.</li>
+        <li><strong>Dzień 3:</strong>Oslo - Lillehammer (Trasa ok. 400 km)<br>
+Śniadanie. Wykwaterowanie. Przejazd do OSLO, stolicy wikingów malowniczo położonej nad brzegiem Oslofjordu. Zwiedzanie Oslo z miejscowym przewodnikiem. Wizyta w Muzeum Statku Polarnego Fram, którym Roald Amundsen jako pierwszy zdobył biegun południowy. Przejazd z półwyspu Bygdøy do parku Vigelanda, gdzie można podziwiać wspaniałe rzeźby – dzieło życia sławnego artysty. Spacer po centrum miasta, gdzie znajduje się m.in. Pałac Królewski, uniwersytet, Teatr Narodowy, gmach parlamentu oraz ratusz. Czas wolny w centrum Oslo. Następnie przejazd wzdłuż brzegów jeziora Mjøsa, największego jeziora Norwegii, do LILLEHAMMER, światowej sławy ośrodka sportów zimowych. Krótki pobyt w parku olimpijskim. Przejazd doliną Gudbrandsdal wzdłuż wijącej się rzeki Lågen. Zakwaterowanie, nocleg.</li>
+        <li><strong>Dzień 4:</strong>Norddalsfjord - droga orłów - Geirangerfjord (Trasa ok. 450 km)<br>
+Śniadanie. Wykwaterowanie. Przejazd malowniczą doliną Romsdalen w okolice Åndalsnes, gdzie znajduje się Ściana Trolli – znana wspinaczkowa trasa. Krótka przeprawa promowa Linge-Eidsdal przez NORDDALSFJORD. Dalsza podróż w stronę słynnej DROGI ORŁÓW i przejazd tą trasą do Geiranger – jednej z najpiękniej położonych miejscowości w Norwegii. Krótka wizyta w Miejscowości Geirnager z widokiem na GEIRANGERFJORD, wpisany na listę UNESCO, oraz piękne wodospady, które spadają do niego z dużej wysokości, tworząc oryginalny spektakl. Rejs promem po Geirangerfjordzie z Geiranger w stronę Hellesylt. Podziwianie zjawiskowych widoków i wodospadów, m.in. Siedmiu Sióstr i Zalotnika. Przejazd do hotelu w pobliżu miejscowości Forde. Zakwaterowanie, nocleg.</li>
+        <li><strong>Dzień 5:</strong>Sognefjord - Flåm - Aurlandsfjord - Nærofjord (Trasa ok. 320 km)<br>
+Śniadanie. Wykwaterowanie. Przejazd w stronę jęzora lodowca Jostedalsbreen-Boyabreen, a następnie do malowniczego Fjærland. Wizyta w Muzeum Lodowcowym z bardzo ciekawą wystawą multimedialną poświęconą lodowcowi Jostedalsbreen i zmianom klimatycznym. Obejrzenie 20 min filmu przedstawiającego wyprawę na lodowiec. Przejazd w stronę Sogndal, położonego nad brzegiem słynnego SOGNEFJORD, do Mannheller, stamtąd przeprawa promowa do Fodnes. W drodze do Flåm przejazd najdłuższym tunelem w Norwegii – ok. 25 km. Fakultatywnie (za dodatkową opłatą na miejscu): rejs z Flåm do Gudvangen po AURLANDSFJORD i NÆROFJORD, wpisanym na listę UNESCO – okazja do podziwiania fantastycznych widoków: malowniczo położone wioski nad fiordami, wodospady, górskie szczyty. Krótki postój w porcie w Gudvangen, następnie przejazd przez kanion Stalheim. Wizyta w punkcie widokowym, skąd można podziwiać kilkudziesięciometrowe wodospady Tvindefossen. Przejazd do Bergen – stolicy fiordów norweskich. Zakwaterowanie, nocleg.</li>
+        <li><strong>Dzień 6:</strong>Bergen - Hardangerfjord - Hardangervidda (Trasa ok. 290 km)<br>
+Śniadanie. Wykwaterowanie. Zwiedzanie BERGEN z przewodnikiem, m.in.: popularny targ rybny i kwiatowy, stary port Bryggen ze słynnym nabrzeżem z pięknymi hanzeatyckimi domami figurującymi na liście UNESCO, stara, drewniana zabudowa Bryggen, wieża Rosenkrantza. Zwiedzanie kościoła św. Marii, najstarszego budynku w Bergen. Czas wolny lub możliwość indywidualnego wjazdu kolejką torową na górę Fløyen (320 m n.p.m.), skąd roztacza się wspaniały widok na Bergen. Dalsza podróż wzdłuż pięknego HARDANGERFJORD, przejazd przez kanion Mabødal do Fossli. Krótki postój przy Vøringsfossen – wspaniałym wodospadzie o 182-metrowym spadku wody. Przejazd przez największy górski płaskowyż Europy – HARDANGERVIDDA, następnie przez Geilo, wzdłuż rzeki Hallingdal. Przejazd do hotelu w jednej z małych, malowniczych, typowo norweskich miejscowości. Zakwaterowanie, nocleg.</li>
+        <li><strong>Dzień 7:</strong>(Trasa ok. 800 km)<br>
+Śniadanie. Wykwaterowanie. Wyjazd w drogę powrotną przez Oslo, Helsingborg i Malmö. Przejazd do portu. Przeprawa promowa.</li>
+        <li><strong>Dzień 8:</strong>Przypłynięcie promu. Przejazd do Polski.</li>
       </ol>
     </section>
 
