--- a/20250703_norwegia.html
+++ b/20250703_norwegia.html
@@ -78,34 +78,74 @@
   <header>
     <h1>🇳🇴 Norwegia</h1>
     <nav>
+      <button                   onclick="showSection('onorwegii')">O Norwegii</button>
       <button onclick="showSection('ciekawostki')">Ciekawostki</button>
-      <button onclick="showSection('rekordy')">Rekordy</button>
       <button onclick="showSection('plan')">Plan Wycieczki</button>
       <button onclick="showSection('dzis')">Dziś</button>
     </nav>
   </header>
 
   <main>
+<section id="onorwegii" style="display: none;">
+  <h2>O Norwegii</h2>
+
+  <h3>🇳🇴 Norwegia – Informacje ogólne</h3>
+  <ul>
+    <li><strong>Pełna nazwa:</strong> Królestwo Norwegii (Kongeriket Norge)</li>
+    <li><strong>Stolica:</strong> Oslo</li>
+    <li><strong>Język urzędowy:</strong> norweski (bokmål i nynorsk)</li>
+    <li><strong>Ustrój:</strong> monarchia konstytucyjna</li>
+    <li><strong>Król:</strong> Harald V</li>
+    <li><strong>Premier:</strong> Jonas Gahr Støre</li>
+  </ul>
+
+  <h3>🌍 Geografia</h3>
+  <ul>
+    <li><strong>Powierzchnia:</strong> 385 207 km²</li>
+    <li><strong>Liczba ludności:</strong> ok. 5,5 mln (2024)</li>
+    <li><strong>Gęstość zaludnienia:</strong> ok. 14 osób/km²</li>
+    <li><strong>Najwyższy szczyt:</strong> Galdhøpiggen – 2469 m n.p.m.</li>
+    <li><strong>Największe jezioro:</strong> Mjøsa</li>
+    <li><strong>Najdłuższy fiord:</strong> Sognefjord (ponad 200 km)</li>
+    <li><strong>Najdłuższy tunel:</strong> Laerdal – 24,5 km</li>
+  </ul>
+
+  <h3>💰 Gospodarka</h3>
+  <ul>
+    <li><strong>Waluta:</strong> korona norweska (NOK)</li>
+    <li><strong>PKB per capita:</strong> ok. 110 000 USD</li>
+    <li><strong>Eksport:</strong> ropa, gaz, ryby, aluminium, maszyny</li>
+    <li><strong>Zasoby:</strong> ropa naftowa, gaz, energia wodna, drewno</li>
+  </ul>
+
+  <h3>🧠 Społeczeństwo i ciekawostki</h3>
+  <ul>
+    <li>Norwegia regularnie znajduje się w czołówce najszczęśliwszych krajów świata.</li>
+    <li>Jest jednym z krajów o najwyższym poziomie życia i edukacji.</li>
+    <li>Norwegowie bardzo dbają o naturę i recykling.</li>
+    <li>Norwegia nie jest w Unii Europejskiej, ale należy do strefy Schengen i EOG.</li>
+  </ul>
+</section>
+
     <section id="ciekawostki">
       <h2>Ciekawostki o Norwegii</h2>
       <ul>
-        <li>Norwegia ma ponad 1 100 fiordów!</li>
-        <li>W Norwegii można zobaczyć zorzę polarną.</li>
-        <li>Norwegowie piją najwięcej kawy na świecie po Finach.</li>
-        <li>Język norweski ma dwie wersje: bokmål i nynorsk.</li>
-        <li>W Norwegii znajduje się najdłuższy tunel drogowy świata – Laerdal (24,5 km).</li>
-      </ul>
-    </section>
-
-    <section id="rekordy" style="display: none;">
-      <h2>Rekordy Norwegii</h2>
-      <ul>
-        <li><strong>Największe jezioro:</strong> Mjøsa</li>
-        <li><strong>Najgłębsze jezioro:</strong> Hornindalsvatnet (514 m)</li>
-        <li><strong>Największy fiord:</strong> Sognefjord (ponad 200 km)</li>
-        <li><strong>Najwyższy szczyt:</strong> Galdhøpiggen (2469 m n.p.m.)</li>
-        <li><strong>Najwyższy wodospad:</strong> Vinnufossen (865 m)</li>
-      </ul>
+  <li>Norwegia ma ponad 1 100 fiordów – to jeden z najbardziej fiordowych krajów świata.</li>
+  <li>W Norwegii można zobaczyć zorzę polarną aż przez 8 miesięcy w roku (na północy).</li>
+  <li>Norwegowie piją jedną z największych ilości kawy na świecie.</li>
+  <li>Język norweski występuje w dwóch wersjach: bokmål i nynorsk.</li>
+  <li>Laerdal to najdłuższy tunel drogowy na świecie – ma 24,5 km długości.</li>
+  <li>Norwegowie mają prawo wędrować niemal wszędzie – tzw. „allemannsretten” (prawo do swobodnego dostępu do natury).</li>
+  <li>Norwegia nie jest w Unii Europejskiej, ale należy do strefy Schengen.</li>
+  <li>Bergen to najbardziej deszczowe miasto Europy – pada tam przez około 240 dni w roku.</li>
+  <li>W Norwegii są obowiązkowe opony zimowe lub z kolcami w zimie – i to nie tylko dla samochodów osobowych.</li>
+  <li>W niektórych częściach Norwegii latem słońce nie zachodzi – tzw. "słońce o północy".</li>
+  <li>Norwegowie mają własne słowo na przytulny nastrój: „koselig”.</li>
+  <li>Norwegia była pierwszym krajem, który zakazał wycinania lasów tropikalnych w ramach polityki klimatycznej.</li>
+  <li>W norweskich szkołach uczniowie często uczą się jeździć na nartach – to narodowy sport.</li>
+  <li>Norwegia zajmuje czołowe miejsce w rankingu jakości życia, wolności i bezpieczeństwa.</li>
+  <li>W Norwegii można spotkać łosie spacerujące po osiedlach.</li>
+</ul>
     </section>
 
     <section id="plan" style="display: none;">
