--- a/20250703_norwegia.html
+++ b/20250703_norwegia.html
@@ -32,7 +32,7 @@
       background: #ffffff;
       border: 2px solid #003153;
       padding: 0.5rem 1rem;
-      margin: 0.3rem;
+      margin: 0.2rem;
       border-radius: 8px;
       font-weight: bold;
       color: #003153;
@@ -210,9 +210,9 @@ Zacumowanie. Przejazd wzdłuż zachodniego wybrzeża Szwecji do granicy z Norweg
 Śniadanie. Wykwaterowanie. Przejazd w stronę jęzora lodowca Jostedalsbreen-Boyabreen, a następnie do malowniczego Fjærland. Wizyta w Muzeum Lodowcowym z bardzo ciekawą wystawą multimedialną poświęconą lodowcowi Jostedalsbreen i zmianom klimatycznym. Obejrzenie 20 min filmu przedstawiającego wyprawę na lodowiec. Przejazd w stronę Sogndal, położonego nad brzegiem słynnego SOGNEFJORD, do Mannheller, stamtąd przeprawa promowa do Fodnes. W drodze do Flåm przejazd najdłuższym tunelem w Norwegii – ok. 25 km. Fakultatywnie (za dodatkową opłatą na miejscu): rejs z Flåm do Gudvangen po AURLANDSFJORD i NÆROFJORD, wpisanym na listę UNESCO – okazja do podziwiania fantastycznych widoków: malowniczo położone wioski nad fiordami, wodospady, górskie szczyty. Krótki postój w porcie w Gudvangen, następnie przejazd przez kanion Stalheim. Wizyta w punkcie widokowym, skąd można podziwiać kilkudziesięciometrowe wodospady Tvindefossen. Przejazd do Bergen – stolicy fiordów norweskich. Zakwaterowanie, nocleg.`,
       `Dzień 6:<br><strong>Bergen - Hardangerfjord - Hardangervidda (Trasa ok. 290 km)</strong><br>
 Śniadanie. Wykwaterowanie. Zwiedzanie BERGEN z przewodnikiem, m.in.: popularny targ rybny i kwiatowy, stary port Bryggen ze słynnym nabrzeżem z pięknymi hanzeatyckimi domami figurującymi na liście UNESCO, stara, drewniana zabudowa Bryggen, wieża Rosenkrantza. Zwiedzanie kościoła św. Marii, najstarszego budynku w Bergen. Czas wolny lub możliwość indywidualnego wjazdu kolejką torową na górę Fløyen (320 m n.p.m.), skąd roztacza się wspaniały widok na Bergen. Dalsza podróż wzdłuż pięknego HARDANGERFJORD, przejazd przez kanion Mabødal do Fossli. Krótki postój przy Vøringsfossen – wspaniałym wodospadzie o 182-metrowym spadku wody. Przejazd przez największy górski płaskowyż Europy – HARDANGERVIDDA, następnie przez Geilo, wzdłuż rzeki Hallingdal. Przejazd do hotelu w jednej z małych, malowniczych, typowo norweskich miejscowości. Zakwaterowanie, nocleg.`,
-      `Dzień 7:<br><strong>(Trasa ok. 800 km) oo</strong><br>
+      `Dzień 7:<br><strong>(Trasa ok. 800 km)</strong><br>
 Śniadanie. Wykwaterowanie. Wyjazd w drogę powrotną przez Oslo, Helsingborg i Malmö. Przejazd do portu. Przeprawa promowa.`,
-      `Dzień 8:Przypłynięcie promu. Przejazd do Polski.`
+      `Dzień 8:<br>Przypłynięcie promu. Przejazd do Polski.`
     ];
 
     function updateDzis() {
