--- a/20250703_norwegia.html
+++ b/20250703_norwegia.html
@@ -31,7 +31,7 @@
     nav button {
       background: #ffffff;
       border: 2px solid #003153;
-      padding: 0.5rem 1rem;
+      padding: 0.5rem 0.5rem;
       margin: 0.2rem;
       border-radius: 8px;
       font-weight: bold;
@@ -86,7 +86,7 @@
   </header>
 
   <main>
-<section id="onorwegii" style="display: none;">
+<section id="onorwegii">
   <h2>O Norwegii</h2>
 
   <h3>🇳🇴 Norwegia – Informacje ogólne</h3>
@@ -127,7 +127,7 @@
   </ul>
 </section>
 
-    <section id="ciekawostki">
+    <section id="ciekawostki" style="display: none;">
       <h2>Ciekawostki o Norwegii</h2>
       <ul>
   <li>Norwegia ma ponad 1 100 fiordów – to jeden z najbardziej fiordowych krajów świata.</li>
