--- a/20250703_norwegia.html
+++ b/20250703_norwegia.html
@@ -117,18 +117,10 @@
     <li><strong>Eksport:</strong> ropa, gaz, ryby, aluminium, maszyny</li>
     <li><strong>Zasoby:</strong> ropa naftowa, gaz, energia wodna, drewno</li>
   </ul>
-
-  <h3>🧠 Społeczeństwo i ciekawostki</h3>
-  <ul>
-    <li>Norwegia regularnie znajduje się w czołówce najszczęśliwszych krajów świata.</li>
-    <li>Jest jednym z krajów o najwyższym poziomie życia i edukacji.</li>
-    <li>Norwegowie bardzo dbają o naturę i recykling.</li>
-    <li>Norwegia nie jest w Unii Europejskiej, ale należy do strefy Schengen i EOG.</li>
-  </ul>
 </section>
 
     <section id="ciekawostki" style="display: none;">
-      <h2>Ciekawostki o Norwegii</h2>
+      <h2>💡 Ciekawostki o Norwegii</h2>
       <ul>
   <li>Norwegia ma ponad 1 100 fiordów – to jeden z najbardziej fiordowych krajów świata.</li>
   <li>W Norwegii można zobaczyć zorzę polarną aż przez 8 miesięcy w roku (na północy).</li>
@@ -145,6 +137,12 @@
   <li>W norweskich szkołach uczniowie często uczą się jeździć na nartach – to narodowy sport.</li>
   <li>Norwegia zajmuje czołowe miejsce w rankingu jakości życia, wolności i bezpieczeństwa.</li>
   <li>W Norwegii można spotkać łosie spacerujące po osiedlach.</li>
+<li>Mimo że Norwegia nie należy do Unii Europejskiej, to jako członek Europejskiego Obszaru Gospodarczego (EOG), obowiązują tam te same zasady roamingu co w UE.
+To oznacza, że możesz korzystać z internetu i dzwonić tak samo jak w Polsce – bez dodatkowych opłat!</li>
+<li>Norwegia regularnie znajduje się w czołówce najszczęśliwszych krajów świata.</li>
+    <li>Jest jednym z krajów o najwyższym poziomie życia i edukacji.</li>
+    <li>Norwegowie bardzo dbają o naturę i recykling.</li>
+    <li>Norwegia nie jest w Unii Europejskiej, ale należy do strefy Schengen i EOG.</li>
 </ul>
     </section>
 
