--- a/20250703_norwegia.html
+++ b/20250703_norwegia.html
@@ -60,6 +60,10 @@
       padding-left: 1.2rem;
     }
 
+li {
+  margin-bottom: 0.3rem; /* lub np. 5px */
+}
+
     #dzien {
       margin: 1rem 0;
       font-weight: bold;
