--- a/20250703_norwegia.html
+++ b/20250703_norwegia.html
@@ -108,10 +108,16 @@ li {
     <li><strong>Powierzchnia:</strong> 385 207 km²</li>
     <li><strong>Liczba ludności:</strong> ok. 5,5 mln (2024)</li>
     <li><strong>Gęstość zaludnienia:</strong> ok. 14 osób/km²</li>
-    <li><strong>Najwyższy szczyt:</strong> Galdhøpiggen – 2469 m n.p.m.</li>
-    <li><strong>Największe jezioro:</strong> Mjøsa</li>
-    <li><strong>Najdłuższy fiord:</strong> Sognefjord (ponad 200 km)</li>
-    <li><strong>Najdłuższy tunel:</strong> Laerdal – 24,5 km</li>
+      <li><strong>Najwyższy szczyt:</strong> Galdhøpiggen (2469 m n.p.m.)</li>
+  <li><strong>Największe jezioro:</strong> Mjøsa (369 km²)</li>
+  <li><strong>Najgłębsze jezioro:</strong> Hornindalsvatnet (514 m głębokości)</li>
+  <li><strong>Najdłuższa rzeka:</strong> Glomma (621 km)</li>
+  <li><strong>Największy wodospad:</strong> Vinnufossen (865 m wysokości)</li>
+  <li><strong>Największe miasto:</strong> Oslo (ponad 700 000 mieszkańców)</li>
+  <li><strong>Najdłuższy tunel:</strong> Lærdalstunnelen (24,5 km)</li>
+  <li><strong>Najwyższe pasmo górskie:</strong> Jotunheimen (szczyty powyżej 2400 m n.p.m.)</li>
+  <li><strong>Największa wyspa:</strong> Hinnøya (2204 km²)</li>
+  <li><strong>Najdłuższy fiord:</strong> Sognefjord (ponad 200 km długości)</li>
   </ul>
 
   <h3>💰 Gospodarka</h3>
@@ -121,32 +127,70 @@ li {
     <li><strong>Eksport:</strong> ropa, gaz, ryby, aluminium, maszyny</li>
     <li><strong>Zasoby:</strong> ropa naftowa, gaz, energia wodna, drewno</li>
   </ul>
+<h3>⚽ Znani Sportowcy</h3>
+<ul>
+  <li><strong>Erling Haaland:</strong> Piłka nożna – napastnik Manchester City. Król strzelców Premier League 2022/23, zdobywca Ligi Mistrzów 2023.</li>
+  
+  <li><strong>Martin Ødegaard:</strong> Piłka nożna – pomocnik i kapitan Arsenalu. Najmłodszy debiutant w reprezentacji Norwegii (15 lat).</li>
+
+  <li><strong>Jakob Ingebrigtsen:</strong> Lekkoatletyka – mistrz olimpijski z Tokio 2021 w biegu na 1500 m, wielokrotny mistrz Europy.</li>
+
+  <li><strong>Karsten Warholm:</strong> Lekkoatletyka – mistrz olimpijski z Tokio 2021 i rekordzista świata w biegu na 400 m przez płotki (45,94 s).</li>
+
+  <li><strong>Marit Bjørgen:</strong> Biegi narciarskie – najbardziej utytułowana zawodniczka zimowych igrzysk (15 medali olimpijskich, w tym 8 złotych).</li>
+
+  <li><strong>Johannes Høsflot Klæbo:</strong> Biegi narciarskie – multimedalista olimpijski i mistrz świata, jeden z najlepszych sprinterów w historii.</li>
+
+  <li><strong>Anders Fannemel:</strong> Skoki narciarskie – były rekordzista świata w długości skoku (251,5 m w 2015 r.).</li>
+
+  <li><strong>Marte Olsbu Røiseland:</strong> Biathlon – multimedalistka olimpijska i mistrzyni świata, najlepsza zawodniczka sezonu 2021/22.</li>
+
+  <li><strong>Magnus Carlsen:</strong> Szachy – pięciokrotny mistrz świata (2013–2023), uznawany za jednego z najwybitniejszych szachistów w historii.</li>
+
+  <li><strong>Kjetil André Aamodt:</strong> Narciarstwo alpejskie – 4 złote medale olimpijskie i 12 medali MŚ, rekordzista wśród narciarzy alpejskich.</li>
+</ul>
+
+<h3>🏆 Osiągnięcia Norwegii</h3>
+<ul>
+  <li><strong>Piłka nożna:</strong> Norwegia zakwalifikowała się do mistrzostw świata dwukrotnie w latach 1994 i 1998. W 1998 roku dotarła do 1/8 finału, pokonując m.in. Brazylię 2:1.</li>
+
+  <li><strong>Lekkoatletyka:</strong> Norwegowie zdobywają medale na igrzyskach olimpijskich i mistrzostwach świata – Jakob Ingebrigtsen (1500 m) i Karsten Warholm (400 m przez płotki) należą do światowej czołówki.</li>
+
+  <li><strong>Skoki narciarskie:</strong> Norwegia to jedna z najpotężniejszych nacji – m.in. rekordowa liczba medali na mistrzostwach świata i igrzyskach. Anders Bardal i Daniel-André Tande zdobywali złoto w drużynie, a Halvor Egner Granerud wygrywał Puchar Świata.</li>
+
+  <li><strong>Biegi narciarskie:</strong> Norwegia dominuje – zawodnicy tacy jak Marit Bjørgen i Johannes Klæbo mają dziesiątki medali olimpijskich i MŚ. Norwegowie regularnie zajmują całe podium w biegach.</li>
+
+  <li><strong>Biathlon:</strong> Norwegowie, w tym Johannes Thingnes Bø i Marte Olsbu Røiseland, to ścisła światowa czołówka. Norwegia wielokrotnie wygrywa klasyfikacje medalowe na igrzyskach i MŚ.</li>
+
+  <li><strong>Narciarstwo alpejskie:</strong> Kjetil André Aamodt i Aksel Lund Svindal zdobyli łącznie kilkanaście olimpijskich medali. Norwegowie są obecni w czołówce wszystkich konkurencji alpejskich.</li>
+
+  <li><strong>Szachy:</strong> Norweg Magnus Carlsen był mistrzem świata od 2013 do 2023 roku i uznawany jest za jednego z najlepszych graczy w historii.</li>
+
+  <li><strong>Sporty motorowe:</strong> Petter Solberg został mistrzem świata WRC (rajdy samochodowe) w 2003 roku, a później mistrzem świata w rallycrossie.</li>
+
+  <li><strong>Sporty wodne:</strong> Norwegowie odnoszą sukcesy w wioślarstwie i żeglarstwie – zdobywając medale olimpijskie, m.in. Olaf Tufte w wioślarstwie.</li>
+
+  <li><strong>Igrzyska zimowe:</strong> Norwegia to najbardziej utytułowany kraj w historii zimowych igrzysk olimpijskich – zdobyła 405 medali (148 złotych) do 2022 roku.</li>
+</ul>
 </section>
 
     <section id="ciekawostki" style="display: none;">
       <h2>💡 Ciekawostki o Norwegii</h2>
       <ul>
   <li>Norwegia ma ponad 1 100 fiordów – to jeden z najbardziej fiordowych krajów świata.</li>
-  <li>W Norwegii można zobaczyć zorzę polarną aż przez 8 miesięcy w roku (na północy).</li>
-  <li>Norwegowie piją jedną z największych ilości kawy na świecie.</li>
+  <li>W północnej Norwegii można zobaczyć zorzę polarną nawet przez 8 miesięcy w roku, a latem słońce nie zachodzi – to zjawisko „słońca o północy”.</li>
   <li>Język norweski występuje w dwóch wersjach: bokmål i nynorsk.</li>
   <li>Laerdal to najdłuższy tunel drogowy na świecie – ma 24,5 km długości.</li>
-  <li>Norwegowie mają prawo wędrować niemal wszędzie – tzw. „allemannsretten” (prawo do swobodnego dostępu do natury).</li>
-  <li>Norwegia nie jest w Unii Europejskiej, ale należy do strefy Schengen.</li>
-  <li>Bergen to najbardziej deszczowe miasto Europy – pada tam przez około 240 dni w roku.</li>
-  <li>W Norwegii są obowiązkowe opony zimowe lub z kolcami w zimie – i to nie tylko dla samochodów osobowych.</li>
-  <li>W niektórych częściach Norwegii latem słońce nie zachodzi – tzw. "słońce o północy".</li>
+  <li>Norwegowie mają prawo swobodnego poruszania się po naturze – tzw. „allemannsretten”.</li>
+  <li>Norwegia nie jest w Unii Europejskiej, ale jako członek EOG i Schengen, obowiązują tam te same zasady roamingu i swobodnego podróżowania.</li>
+  <li>Bergen to najbardziej deszczowe miasto Europy – średnio 240 dni deszczu w roku.</li>
+  <li>W zimie obowiązkowe są opony zimowe lub z kolcami – także dla autobusów i ciężarówek.</li>
   <li>Norwegowie mają własne słowo na przytulny nastrój: „koselig”.</li>
-  <li>Norwegia była pierwszym krajem, który zakazał wycinania lasów tropikalnych w ramach polityki klimatycznej.</li>
-  <li>W norweskich szkołach uczniowie często uczą się jeździć na nartach – to narodowy sport.</li>
-  <li>Norwegia zajmuje czołowe miejsce w rankingu jakości życia, wolności i bezpieczeństwa.</li>
-  <li>W Norwegii można spotkać łosie spacerujące po osiedlach.</li>
-<li>Mimo że Norwegia nie należy do Unii Europejskiej, to jako członek Europejskiego Obszaru Gospodarczego (EOG), obowiązują tam te same zasady roamingu co w UE.
-To oznacza, że możesz korzystać z internetu i dzwonić tak samo jak w Polsce – bez dodatkowych opłat!</li>
-<li>Norwegia regularnie znajduje się w czołówce najszczęśliwszych krajów świata.</li>
-    <li>Jest jednym z krajów o najwyższym poziomie życia i edukacji.</li>
-    <li>Norwegowie bardzo dbają o naturę i recykling.</li>
-    <li>Norwegia nie jest w Unii Europejskiej, ale należy do strefy Schengen i EOG.</li>
+  <li>Norwegia była pierwszym krajem, który zakazał wycinania lasów tropikalnych w ramach polityki klimatycznej i słynie z ekologii i recyklingu.</li>
+  <li>W szkołach dzieci uczą się jeździć na nartach – to narodowy sport.</li>
+  <li>Można tam spotkać łosie spacerujące po osiedlach!</li>
+  <li>Norwegia regularnie zajmuje wysokie miejsca w rankingach jakości życia, edukacji, wolności i szczęścia.</li>
+  <li>Norwegowie piją jedną z największych ilości kawy na świecie.</li>
 </ul>
     </section>
 
